# csv-reader

./: Cargo.toml
data/: 1-row.csv
src/: bin.rs  lib.rs  reader.rs
src/parser/: default.rs  mod.rs
