[package]
name = "rust-csv-reader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mybin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
fast-float = "0.2.0"
memchr = "2.7.1"
memmap = "0.7.0"
paste = "1.0.14"
